# avplayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  avplayer.cpp  avplayer.h  conanfile.txt
AV/include/: IGLContext.h
LearnAV/include/: IGLContext.h  IPlaybackListener.h  IPlayer.h  IVideoFilter.h
LearnAV/qt/: OpenGLView.cpp  OpenGLView.h
LearnAV/src/Core/: SyncNotifier.cpp  SyncNotifier.h  TaskPool.cpp  TaskPool.h
LearnAV/src/Define/: BaseDef.h  FileWriterParameters.h  IAVPacket.h  IAudioSamples.h  IVideoFrame.h
LearnAV/src/Engine/: AVSynchronizer.cpp  AVSynchronizer.h  AudioPipeline.cpp  AudioPipeline.h  AudioSpeaker.cpp  AudioSpeaker.h  GLContext.cpp  Player.cpp  Player.h  VideoDisplayView.cpp  VideoDisplayView.h  VideoPipeline.cpp  VideoPipeline.h
LearnAV/src/Interface/: IAudioPipeline.h  IAudioSpeaker.h  IFileReader.h  IFileWriter.h  IVideoDisplayView.h  IVideoPipeline.h
LearnAV/src/Reader/: AudioDecoder.cpp  AudioDecoder.h  DeMuxer.cpp  DeMuxer.h  FileReader.cpp  FileReader.h  VideoDecoder.cpp  VideoDecoder.h
LearnAV/src/Reader/Interface/: IAudioDecoder.h  IDeMuxer.h  IVideoDecoder.h
LearnAV/src/Utils/: GLUtils.cpp  GLUtils.h
LearnAV/src/VideoFilter/: FlipVerticalFilter.cpp  FlipVerticalFilter.h  GrayFilter.cpp  GrayFilter.h  InvertFilter.cpp  InvertFilter.h  StickerFilter.cpp  StickerFilter.h  VideoFilter.cpp  VideoFilter.h
LearnAV/src/Writer/: AudioEncoder.cpp  AudioEncoder.h  FileWriter.cpp  FileWriter.h  Muxer.cpp  Muxer.h  VideoEncoder.cpp  VideoEncoder.h
LearnAV/src/Writer/Interface/: IAudioEncoder.h  IMuxer.h  IVideoEncoder.h
Tests/: CMakeLists.txt  demux.cpp  demux.h
qt/: Main.cpp  MainWindow.cpp  MainWindow.h
qt/UI/: ControllerWidget.cpp  ControllerWidget.h  PlayerWidget.cpp  PlayerWidget.h
